<resources>
    <string name="app_name">CSCB07</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome to our App!</string>
    <string name="welcome_message">Please choose what type of user you are:</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="login_create">Login/Create Account</string>
    <string name="welcome_patient">Welcome Patient! Please Log In:</string>
    <string name="welcome_doctor">Welcome Doctor, Please Log In:</string>
    <string name="or">OR</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="create_account_but">Create Account</string>
    <string name="create_header">Create Your Account Here!</string>
    <string name="enter_new_username">Enter a username</string>
    <string name="enter_new_name">Enter first and last name separated by space</string>
    <string name="enter_new_password">Enter a password</string>
    <string name="enter_new_spec">Enter specializations separated by comma</string>
    <string name="create">Create!</string>
    <string name="bday_month">Month</string>
    <string name="bday_day">Day</string>
    <string name="bday_year">Year</string>
    <string name="I_am_prompt">I am a:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="view_appointment">View Appointments</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="view_patient">View Patient Information</string>
    <string name="upcoming_appointment">Upcoming Appointments</string>
    <string name="back">Go Back to Dashboard</string>
    <string name="appointment_placeholder"><b>— Appointment #0 —</b>\n
        <b>Doctor:</b> doctor_name\n
        <b>Patient:</b> patient_name\n
        <b>Date:</b> 0/0/2021\n
        <b>Time:</b> From 0:0 to 0:0\n\n
        <b>— Appointment #0 —</b>\n
        <b>Doctor:</b> doctor_name\n
        <b>Patient:</b> patient_name\n
        <b>Date:</b> 0/0/2021\n
        <b>Time:</b> From 0:0 to 0:0
    </string>
    <string name="filter_note"><b>Note:</b> Choosing a specialization after gender will take you to
        doctors compatible with your needs.</string>
    <string name="doctors_requested_message">Here are the filtered doctors</string>
</resources>